# hostid

./: .env.example  .gitignore  README-en.md  README-zh.md  README.md  docker-compose.yaml  package-lock.json  package.json
.github/workflows/: docker-build.yml  docker-publish.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  promote-admin.cjs  reset-admin.cjs
backend/data.ms/: instance-uid
backend/data.ms/auth/: data.mdb  lock.mdb
backend/data.ms/tasks/: data.mdb  lock.mdb
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/lib/: prisma.ts
backend/src/middleware/: auth.ts  avatarUpload.ts  error.ts  upload.ts
backend/src/routes/: admin.ts  attachment.ts  auth.ts  email.ts  oauth.ts  oauth2.ts  oauthApps.ts  oauthClient.ts  oauthConfig.ts  oauthServer.ts  sso.ts
backend/src/services/: ai.ts  encryption.ts  mailer.ts  oauth2.ts
backend/src/smtp/: index.ts
backend/src/store/: MemoryStore.ts  index.ts  types.ts
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md  icon.icns
desktop/src-tauri/src/: main.rs
docs/: CHANGELOG.md  design-system.md  docker-compose.yaml  sso-integration-go.md  sso-integration-java.md  sso-integration-nodejs.md  sso-integration-rust.md
frontend/: .env.example  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: config.js
frontend/src/: App.tsx  index.css  main.tsx
(+59 files in other folders)
