[package]
name = "selfhostmail-desktop"
version = "1.0.0"
description = "SelfHostMail Desktop Client"
authors = ["SelfHostMail"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.32"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
